--- a/web/geodesk_gis/templates/gis/tmi_overlay.html
+++ b/web/geodesk_gis/templates/gis/tmi_overlay.html
@@ -86,6 +86,6 @@
     var STATIC_URL = "{{ static }}";
    
 </script>
-<script src="{% static 'gis/js/tmi-overlay.js' %}"></script>
+<script src="{% static 'gis/js/tmi-overlay_test.js' %}"></script>
 <script src="{% static 'gis/js/data-processor.js' %}"></script>
 {% endblock %}
