--- a/web/geodesk_gis/static/gis/css/data-processor.css
+++ b/web/geodesk_gis/static/gis/css/data-processor.css
@@ -107,13 +107,55 @@
 }
 
 
-.radio-container {
+.radio-container{
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
 }
 
-.radio-item {
+.radio-item{
     margin-bottom: 5px;
+}
+
+.radio-container_js{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.radio-item_js{
+    margin-bottom: 5px;
+}
+
+.text-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;!important
+    color: #333;
+}
+
+.map-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.map-wrapper {
+    position: relative;
+}
+
+
+.textbox_similarity_value {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 1;
 }
 
 
