implemented ranking table and scale selection buttons

--- a/web/appboard/templates/appboard/sidebar.html
+++ b/web/appboard/templates/appboard/sidebar.html
@@ -51,6 +51,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'gis:compare' %}">
+                    <i class="fas fa-fw fal fa-list-check"></i>
+                    <span class="ms-1 side-item">Similarity Search</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="">
                     <i class="fas fa-fw fa-clipboard"></i>
                     <span class="ms-1 side-item unlinked">Task Master</span>
