--- a/web/geodesk_gis/templates/gis/compare_tmi.html
+++ b/web/geodesk_gis/templates/gis/compare_tmi.html
@@ -7,16 +7,24 @@
 
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'gis/css/data-processor.css' %}">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
     <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
     <script src="//d3js.org/d3.v4.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
+
     {% leaflet_js plugins="ALL" %}
     {% leaflet_css %}
     <style>
-      .leaflet-container { height: 100vh; }
+      .leaflet-container { height: 75vh; }
 
     </style>
 {% endblock %}
@@ -33,108 +41,121 @@
     {% endif %} {% endfor %} {% endif %}
 </div>
 
-<div class="container-fluid content-margin-top-offset w-100 h-100 mb-5" >
+<div class="container-fluid content-margin-top-offset w-150 h-100 mb-5">
     <div class="container p-0 h-100 mb-5">
-
-        <input id="process_id" type="hidden" class="process_id" name="process_id"/>
+        <input id="process_id" type="hidden" class="process_id" name="process_id" />
         <div class="modal fade" id="view_task_modal" data-keyboard="false">
             <div class="modal-dialog modal-dialog-centered modal-md" role="document" id="modal_body">
-                <div class="modal-content" id="modal-content">
-                </div>
+                <div class="modal-content" id="modal-content"></div>
             </div>
         </div>
 
         <div class="d-flex content-margin-top-offset px-4">
-            <h4 class="mb-2 text-ofx-blue">GIS -Similarity Comparison&nbsp <i class="fas fa-fw fa-globe"></i></h4>
+            <h4 class="mb-2 text-ofx-blue">GIS - Similarity Comparison&nbsp<i class="fas fa-fw fa-globe"></i></h4>
         </div>
 
-        <div class="map-wrapper px-4 mb-5 h-80">
-            <div class="map-wrapper">
-                {% leaflet_map "main" %}
+        <div class="row px-4 mb-5">
+            <div class="col-md-8">
+                <div class="map-wrapper" style="width: 100%;">
+                    {% leaflet_map "main" %}
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8">
+                        <div id="zoomSelectionButtons">
+                            <button type="button" class="btn btn-primary" id="zoom5km">5km</button>
+                            <button type="button" class="btn btn-primary" id="zoom10km" >10km</button>
+                            <button type="button" class="btn btn-primary" id="zoom20km" >20km</button>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div id="cycleTroughResultsButtons" class="text-end">
+                            <button type="button" class="btn btn-primary" id="back">Back</button>
+                            <button type="button" class="btn btn-primary" id="forward" >Forward</button>
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+
+
             </div>
 
 
-           <!-- <form action="{% url 'gis:output_model_result' %}" method="post">
-                {% csrf_token %}
-                <button class="submit d-none d-sm-inline-block btn bg-ofx-blue text-white shadow-sm" id="submit4" type="submit">Simulate model result</button>
-            </form>-->
-
-
-
-            <div>
-                <h3>Selected Image</h3>
-                <img id="selectedImage" src="" alt="Selected Image">
-<!--                <button onclick="updateImage()">Update Image</button>-->
-
-                <h3>Result</h3>
-                <div id="modelResultText"></div>
-
-                <h3>Location Coordinates </h3>
+           <div class="col-md-4" id="resultSection">
                 <div>
-                    <p>Latitude: <span id="latitude"></span></p>
-                    <p>Longitude: <span id="longitude"></span></p>
+
+                    <div id="startMessage">
+                        <p>Double-click on the map to start</p>
+                    </div>
+
+                    <div  id="instanceResults" style="display: none">
+
+                    <div class="image-container">
+                        <h3 class="result-heading">Selected Image</h3>
+                        <img id="selectedImage" style="margin-bottom: 15px;" src="" alt="Selected Image">
+                        <h3 class="result-heading">Compared Image</h3>
+                        <img id="comparedImage" style="margin-bottom: 15px;" src="" alt="Compared Image">
+                    </div>
+
+
+
+                        <h3 class="result-heading" >Result</h3>
+                        <div id="modelResultText" style="margin-left: 0px;" class="result-text"></div>
+
+                        <h3 class="result-heading">Location Coordinates</h3>
+                        <div class="coordinates">
+                            <p class="coordinate-label">Scale: <span id="scale" class="coordinate-value">Loading...</span></p>
+                            <p class="coordinate-label">Latitude: <span id="latitude" class="coordinate-value">Loading...</span></p>
+                            <p class="coordinate-label">Longitude: <span id="longitude" class="coordinate-value">Loading...</span></p>
+                        </div>
+
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resultsModal">Show Results</button>
+
+                        <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-labelledby="resultsModalLabel" aria-hidden="true">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="resultsModalLabel">Stored Results</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+
+
+                          <div id="resultsTableContainer">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th class="column1">Latitude</th>
+                                        <th class="column1">Longitude</th>
+                                        <th class="column1">Scale</th>
+                                        <th class="column1">Similarity</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+
+                                </tbody>
+                            </table>
+
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    </div>
                 </div>
             </div>
         </div>
-
-
-
-
-      <!--  <div class="container p-0 h-100 mb-5 d-flex justify-content-between">
-            <form id=form_method_selection method="POST" action="{% url 'gis:project_area_input_selection' %}">
-                {% csrf_token %}
-
-                <div class="radio-container">
-
-                    <div class="radio-item">
-                        <input type="radio" id="radio1" name="area_selection" value="Upload">
-                        <label for="radio1">Upload .shp</label>
-                    </div>
-                    <div class="radio-item">
-                        <input type="radio" id="radio2" name="area_selection" value="Enter">
-                        <label for="radio2">Enter coordinates</label>
-                    </div>
-                    <div class="radio-item">
-                        <input type="radio" id="radio3" name="area_selection" value="Select">
-                        <label for="radio3">Select area</label>
-                    </div>
-                    <div>
-                        <button class="submit d-none d-sm-inline-block btn bg-ofx-blue text-white shadow-sm " id="submit2" type="submit" form="form_method_selection">Search for similarities</button>
-                    </div>
-
-                </div>
-            </form>
-
-
-            <form id=form_method_selection_js>
-                <div class="radio-container_js">
-                    <div class="radio-item_js">
-                        <input type="radio" id="radio1_js" name="area_selection_js" value="Upload_js">
-                        <label for="radio1">Upload .shp</label>
-                    </div>
-                    <div class="radio-item_js">
-                        <input type="radio" id="radio2_js" name="area_selection_js" value="Enter_js">
-                        <label for="radio2">Enter coordinates</label>
-                    </div>
-                    <div class="radio-item_js">
-                        <input type="radio" id="radio3_js" name="area_selection_js" value="Select_js">
-                        <label for="radio3">Select area</label>
-                    </div>
-                    <div>
-                        <button class="submit d-none d-sm-inline-block btn bg-ofx-blue text-white shadow-sm " id="submit3" type="submit">Search for similarities</button>
-                    </div>
-
-                 </div>
-
-            </form>
-
-            </div>-->
-
-
     </div>
-
-
 </div>
+
 
 {% endblock %}
 
