--- a/web/geodesk_gis/templates/gis/compare_tmi.html
+++ b/web/geodesk_gis/templates/gis/compare_tmi.html
@@ -13,7 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
@@ -24,11 +23,10 @@
     {% leaflet_js plugins="ALL" %}
     {% leaflet_css %}
     <style>
-      .leaflet-container { height: 75vh; }
+        .leaflet-container { height: 75vh; }
 
     </style>
 {% endblock %}
-
 
 {% block content %}
 <div id="flash-message" class="text-sm ms-5">
@@ -41,6 +39,13 @@
     {% endif %} {% endfor %} {% endif %}
 </div>
 
+<div id="loadingBar" style="display: none; z-index: 1000; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;">
+    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...
+</div>
+
+<div id="loadingBg" style="display: none; position: absolute; width: 100%; height: 100%; background-color: rgba(127, 127, 127, 0.4); z-index: 999;">
+</div>
+
 <div class="container-fluid content-margin-top-offset w-150 h-100 mb-5">
     <div class="container p-0 h-100 mb-5">
         <input id="process_id" type="hidden" class="process_id" name="process_id" />
@@ -49,106 +54,98 @@
                 <div class="modal-content" id="modal-content"></div>
             </div>
         </div>
-
         <div class="d-flex content-margin-top-offset px-4">
             <h4 class="mb-2 text-ofx-blue">GIS - Similarity Comparison&nbsp<i class="fas fa-fw fa-globe"></i></h4>
         </div>
-
         <div class="row px-4 mb-5">
             <div class="col-md-8">
                 <div class="map-wrapper" style="width: 100%;">
                     {% leaflet_map "main" %}
                 </div>
-
                 <div class="row">
-                    <div class="col-md-8">
-                        <div id="zoomSelectionButtons">
-                            <button type="button" class="btn btn-primary" id="zoom5km">5km</button>
-                            <button type="button" class="btn btn-primary" id="zoom10km" >10km</button>
-                            <button type="button" class="btn btn-primary" id="zoom20km" >20km</button>
+                    <div class="col-md-4" id="zoomSelectionButtons">
+                        <div class="d-flex justify-content-around">
+                            <div>
+                                <button type="button" class="btn btn-primary" id="zoom5km">5km</button>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-primary" id="zoom10km" >10km</button>    
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-primary" id="zoom20km" >20km</button>    
+                            </div>
                         </div>
                     </div>
 
                     <div class="col-md-4">
-                        <div id="cycleTroughResultsButtons" class="text-end">
-                            <button type="button" class="btn btn-primary" id="back">Back</button>
-                            <button type="button" class="btn btn-primary" id="forward" >Forward</button>
+                        <div class="d-flex justify-content-around">
+                            <button type="button" class="btn btn-primary" id="clearResult" onclick="clearResult()">Clear Result</button>
                         </div>
+                        
                     </div>
 
+                    <div class="col-md-4" id="cycleTroughResultsButtons">
+                        <div class="text-end d-flex justify-content-around">
+                            <div>
+                                <button type="button" class="btn btn-primary" id="back">Back</button>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-primary" id="forward" >Forward</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-
-
-
-
             </div>
-
-
-           <div class="col-md-4" id="resultSection">
+            <div class="col-md-4" id="resultSection">
                 <div>
-
                     <div id="startMessage">
                         <p>Double-click on the map to start</p>
                     </div>
-
                     <div  id="instanceResults" style="display: none">
-
                     <div class="image-container">
                         <h3 class="result-heading">Selected Image</h3>
                         <img id="selectedImage" style="margin-bottom: 15px;" src="" alt="Selected Image">
                         <h3 class="result-heading">Compared Image</h3>
                         <img id="comparedImage" style="margin-bottom: 15px;" src="" alt="Compared Image">
                     </div>
-
-
-
                         <h3 class="result-heading" >Result</h3>
                         <div id="modelResultText" style="margin-left: 0px;" class="result-text"></div>
-
                         <h3 class="result-heading">Location Coordinates</h3>
                         <div class="coordinates">
                             <p class="coordinate-label">Scale: <span id="scale" class="coordinate-value">Loading...</span></p>
                             <p class="coordinate-label">Latitude: <span id="latitude" class="coordinate-value">Loading...</span></p>
                             <p class="coordinate-label">Longitude: <span id="longitude" class="coordinate-value">Loading...</span></p>
                         </div>
-
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resultsModal">Show Results</button>
-
                         <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-labelledby="resultsModalLabel" aria-hidden="true">
-                      <div class="modal-dialog" role="document">
+                        <div class="modal-dialog" role="document">
                         <div class="modal-content">
-                          <div class="modal-header">
-                            <h5 class="modal-title" id="resultsModalLabel">Stored Results</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                          </div>
-
-
-                          <div id="resultsTableContainer">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th class="column1">Latitude</th>
-                                        <th class="column1">Longitude</th>
-                                        <th class="column1">Scale</th>
-                                        <th class="column1">Similarity</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-
-                                </tbody>
-                            </table>
-
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                          </div>
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="resultsModalLabel">Stored Results</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div id="resultsTableContainer">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th class="column1">Latitude</th>
+                                            <th class="column1">Longitude</th>
+                                            <th class="column1">Scale</th>
+                                            <th class="column1">Similarity</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
                       </div>
                     </div>
-
                     </div>
                 </div>
             </div>
@@ -161,10 +158,8 @@
 
 {% block extra_body %}
 <script>
-
     let csrf_token = "{{ csrf_token }}"
     var STATIC_URL = "{{ static }}";
-
 </script>
 
 <script src="{% static 'gis/js/compare_tmi.js' %}"></script>
