--- a/web/geodesk_tmi/templates/tmi/compare_tmi.html
+++ b/web/geodesk_tmi/templates/tmi/compare_tmi.html
@@ -6,7 +6,7 @@
 {% load leaflet_tags %}
 
 {% block extra_head %}
-    <link rel="stylesheet" href="{% static 'gis/css/data-processor.css' %}">
+    <link rel="stylesheet" href="{% static 'tmi/css/data-processor.css' %}">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
